Failing jpackage tests with fastdebug/release build

XMLWordPrintable

    • b24
    • x86_64
    • linux_redhat_8.0

        I noticed that several jpackage tests are failing in my fastdebug builds, for example:

        LANG=C LOG=info CONF=linux-x86_64-server-fastdebug make run-test TEST=tools/jpackage/share/jdk/jpackage/tests/BasicTest.java

        fails with several stacktraces like this:
        java.lang.AssertionError: Expected [0]. Actual [134]: Check command ["/home/rkennke/src/openjdk/lilliput/build/linux-x86_64-server-fastdebug/test-support/jtreg_test_jdk_tools_jpackage_share_jdk_jpackage_tests_BasicTest_java/scratch/0/./testWhitespaceInPaths/jumps over the lazy dog/WhitespaceInPathsBasicTest/bin/WhitespaceInPathsBasicTest"](1) exited with 0 code
        at jdk.jpackage.test.TKit.error(TKit.java:264)
        at jdk.jpackage.test.TKit.assertEquals(TKit.java:567)
        at jdk.jpackage.test.Executor$Result.assertExitCodeIs(Executor.java:183)

        executing the package directly results in crash with coredump:
        ./build/linux-x86_64-server-fastdebug/test-support/jtreg_test_jdk_tools_jpackage_share_jdk_jpackage_tests_BasicTest_java/tools/jpackage/share/jdk/jpackage/tests/BasicTest/testWhitespaceInPaths/jumps\ over\ the\ lazy\ dog/WhitespaceInPathsBasicTest/bin/WhitespaceInPathsBasicTest
        hello: Environment supports a display
        hello: Environment supports a desktop
        jpackage test application
        args.length: 0
        hello: Output file: [appOutput.txt]
        pure virtual method called
        terminate called without an active exception
        Aborted (core dumped)

        when running it in gdb, I am getting the following stacktrace:
        (gdb) bt
        #0 0x00007ffff783e37f in raise () from /lib64/libc.so.6
        #1 0x00007ffff7828db5 in abort () from /lib64/libc.so.6
        #2 0x00007ffff72dc09b in __gnu_cxx::__verbose_terminate_handler() [clone .cold.1] () from /lib64/libstdc++.so.6
        #3 0x00007ffff72e253c in __cxxabiv1::__terminate(void (*)()) () from /lib64/libstdc++.so.6
        #4 0x00007ffff72e2597 in std::terminate() () from /lib64/libstdc++.so.6
        #5 0x00007ffff72e33f5 in __cxa_pure_virtual () from /lib64/libstdc++.so.6
        #6 0x00007ffff75fcab8 in Logger::log(Logger::LogLevel, char const*, int, char const*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&) const ()
           from /home/rkennke/src/openjdk/lilliput/build/linux-x86_64-server-fastdebug/test-support/jtreg_test_jdk_tools_jpackage_share_jdk_jpackage_tests_BasicTest_java/tools/jpackage/share/jdk/jpackage/tests/BasicTest/testWhitespaceInPaths/jumps over the lazy dog/WhitespaceInPathsBasicTest/lib/libapplauncher.so
        #7 0x00007ffff75e88bc in (anonymous namespace)::dcon() ()
           from /home/rkennke/src/openjdk/lilliput/build/linux-x86_64-server-fastdebug/test-support/jtreg_test_jdk_tools_jpackage_share_jdk_jpackage_tests_BasicTest_java/tools/jpackage/share/jdk/jpackage/tests/BasicTest/testWhitespaceInPaths/jumps over the lazy dog/WhitespaceInPathsBasicTest/lib/libapplauncher.so
        #8 0x00007ffff7ddfc96 in _dl_fini () from /lib64/ld-linux-x86-64.so.2
        #9 0x00007ffff7840b0c in __run_exit_handlers () from /lib64/libc.so.6
        #10 0x00007ffff7840c40 in exit () from /lib64/libc.so.6
        #11 0x00007ffff782a49a in __libc_start_main () from /lib64/libc.so.6
        #12 0x0000555555400e4e in _start ()

        the call into __cxa_pure_virtual () seems to indicate that the binary is linked such that it's calling into a pure virtual method.

        Curiously, I cannot reproduce the problem with a slowdebug build.
        It does reproduce with release and fastdebug builds.

        Please let me know what I can do to help narrow the problem.

              Assignee:
              Alexey Semenyuk
              Reporter:
              Roman Kennke
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: