8274856: Failing jpackage tests with fastdebug/release build